--- a/GoIT/markup/home/lesson1/index.html
+++ b/GoIT/markup/home/lesson1/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
 	<meta charset="UTF-8">
-	<title>branch test</title>
+	<title>Здравствуйте, Peter</title>
 	<link rel="stylesheet" href="css/css1.css">
 </head>
 <body>
