add div class="line"

--- a/GoIT/markup/home/lesson1/index.html
+++ b/GoIT/markup/home/lesson1/index.html
@@ -9,21 +9,32 @@
 
 	<div class="wrapper">
 		<h1>Ткаченко Татьяна Николаевна</h1>
+		
 		<div class="imgTT"><img src="img/img1.jpg" alt="Изображение пользователя" title="это ТТ"> </div>
-		<p class="line">Закончила <a href="https://ru.wikipedia.org/wiki/Институт_холода,_криотехнологий_и_экоэнергетики_имени_В._С._Мартыновского_ОНАПТ" target="_blank">ОГАХ</a> в 2011 году</p>
+		
+		<p>Закончила <a href="https://ru.wikipedia.org/wiki/Институт_холода,_криотехнологий_и_экоэнергетики_имени_В._С._Мартыновского_ОНАПТ" target="_blank">ОГАХ</a> в 2011 году</p>
+		
+		<div class="line"> <!--блок-->		
 		<p>Хочу учить фронтенд, потому что:</p>
 		<ul>
 			<li>Делать красиво и своими руками - это круто</li>
 			<li>Мне кажется, что это мое</li>
 			<li>Ну, и было бы прекрасно дополнительно получать $</li>
 		</ul>
-		<p>Мой контактный номер телефона:</p>
-		<p>+380632037017</p>
+		</div>
+		
+		<div class="line"> <!--блок-->
+		<p>Мой контактный номер телефона:
+		<span>+380632037017</span></p>
+		
 		<p>Ссылки на мои социальные сети:</p>
-		<p><a href="https://vk.com/tteshe4ka" target="_blank">vk.com</a></p>
-		<p class="line"><a href="https://www.facebook.com/profile.php?id=100006662474275" target="_blank">facebook.com</a></p>
-		<p>Мой фидбек:</p> 
-		<p>Есть такое слово "надо"</p>
+		<span><a href="https://vk.com/tteshe4ka" target="_blank">vk.com</a></span>
+		<span><a href="https://www.facebook.com/profile.php?id=100006662474275" target="_blank">facebook.com</a></span>
+		
+		<div class="line"> <!--блок-->
+		<p>Мой фидбек:
+		<span>Есть такое слово "надо"</span></p> 
+		</div>
 	</div>
 </body>
 </html>
