--- a/GoIT/markup/home/lesson1/index.html
+++ b/GoIT/markup/home/lesson1/index.html
@@ -27,9 +27,9 @@
 		<p>Мой контактный номер телефона:
 		<span>+380632037017</span></p>
 		
-		<p>Ссылки на мои социальные сети:</p>
+		<p>Ссылки на мои социальные сети:
 		<span><a href="https://vk.com/tteshe4ka" target="_blank">vk.com</a></span>
-		<span><a href="https://www.facebook.com/profile.php?id=100006662474275" target="_blank">facebook.com</a></span>
+		<span><a href="https://www.facebook.com/profile.php?id=100006662474275" target="_blank">facebook.com</a></span></p>
 		
 		<div class="line"> <!--блок-->
 		<p>Мой фидбек:
