--- a/GoIT/markup/home/lesson1/index.html
+++ b/GoIT/markup/home/lesson1/index.html
@@ -30,6 +30,7 @@
 		<p>Ссылки на мои социальные сети:
 		<span><a href="https://vk.com/tteshe4ka" target="_blank">vk.com</a></span>
 		<span><a href="https://www.facebook.com/profile.php?id=100006662474275" target="_blank">facebook.com</a></span></p>
+		</div>
 		
 		<div class="line"> <!--блок-->
 		<p>Мой фидбек:
