--- a/GoIT/markup/home/lesson2/index.html
+++ b/GoIT/markup/home/lesson2/index.html
@@ -1,18 +1,46 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ru">
 <head>
 	<meta charset="UTF-8">
 	<title>fitness</title>
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<div class="wrapper">
-		<div class="header">
-
+		<header>
+			<div class="logo">
+				<img src="img/logo_index.png" alt="Firness">
+			</div>
+			<div class="nav_menu">
+				<ul>
+					<li><a href="#">Главная</li></a>
+					<li><a href="#">Товары</li></a>
+					<li><a href="#">О нас</li></a>
+					<li><a href="#">Контакты</li></a>
+				</ul>
+			</div>	
+		</header>
+		<div class="container">
+			<div class="content">
+				<div class="img">
+					<img src="img/img_bicycle.png" alt="bicycle">
+				</div>
+								<div class="box">
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos dignissimos adipisci cumque enim necessitatibus repellendus, magni debitis. Officia, porro quos, in ipsam ducimus dicta eveniet, harum hic veniam accusamus possimus!
+					</p>
+				</div>
+			</div>
+			<div class="left_menu">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos dignissimos adipisci cumque enim necessitatibus repellendus, magni debitis. Officia, porro quos, in ipsam ducimus dicta eveniet, harum hic veniam accusamus possimus!
+				</p>
+			</div>
 		</div>
-		<div class="content">
-
-		</div>
-		<div class="footer"></div>
+		<footer>
+			<div class="box">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos dignissimos adipisci cumque enim necessitatibus repellendus, magni debitis. Officia, porro quos, in ipsam ducimus dicta eveniet, harum hic veniam accusamus possimus!
+				</p>
+			</div>
+		</footer>
 
 	</div>
 </body>
