--- a/GoIT/markup/home/lesson2/index.html
+++ b/GoIT/markup/home/lesson2/index.html
@@ -25,23 +25,31 @@
 				<div class="img">
 					<img src="img/img_bicycle.png" alt="bicycle">
 				</div>
-								<div class="box">
+				<div class="left_menu">
+					<ul>
+						<li><a href="#">Ноутбуки</li></a>
+						<li><a href="#">Планшеты</li></a>
+						<li><a href="#">Телефоны</li></a>
+						<li><a href="#">Телевизоры</li></a>
+						<li><a href="#">Бытовая техника</li></a>
+						<li><a href="#">Автотовары</li></a>
+					</ul>
+				</div>
+				<div class="description">
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos dignissimos adipisci cumque enim necessitatibus repellendus, magni debitis. Officia, porro quos, in ipsam ducimus dicta eveniet, harum hic veniam accusamus possimus!
 					</p>
 				</div>
 			</div>
-			<div class="left_menu">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos dignissimos adipisci cumque enim necessitatibus repellendus, magni debitis. Officia, porro quos, in ipsam ducimus dicta eveniet, harum hic veniam accusamus possimus!
-				</p>
-			</div>
 		</div>
-		<footer>
-			<div class="box">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos dignissimos adipisci cumque enim necessitatibus repellendus, magni debitis. Officia, porro quos, in ipsam ducimus dicta eveniet, harum hic veniam accusamus possimus!
-				</p>
-			</div>
-		</footer>
-
+		<div class="footer">
+			<ul>
+				<li><a href="#">Главная</li></a>
+				<li><a href="#">Товары</li></a>
+				<li><a href="#">О нас</li></a>
+				<li><a href="#">Контакты</li></a>
+			</ul>
+			<p>2014&copy;All rights reserved</p>
+		</div>
 	</div>
 </body>
 </html>
