--- a/GoIT/markup/home/lesson2/index.html
+++ b/GoIT/markup/home/lesson2/index.html
@@ -3,52 +3,56 @@
 <head>
 	<meta charset="UTF-8">
 	<title>fitness</title>
+	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<div class="wrapper">
-		<header>
-			<div class="logo">
-				<img src="img/logo_index.png" alt="Firness">
-			</div>
-			<div class="nav_menu">
-				<ul>
-					<li><a href="#">Главная</li></a>
-					<li><a href="#">Товары</li></a>
-					<li><a href="#">О нас</li></a>
-					<li><a href="#">Контакты</li></a>
-				</ul>
-			</div>	
-		</header>
-		<div class="container">
-			<div class="content">
-				<div class="img">
-					<img src="img/img_bicycle.png" alt="bicycle">
-				</div>
-				<div class="left_menu">
-					<ul>
-						<li><a href="#">Ноутбуки</li></a>
-						<li><a href="#">Планшеты</li></a>
-						<li><a href="#">Телефоны</li></a>
-						<li><a href="#">Телевизоры</li></a>
-						<li><a href="#">Бытовая техника</li></a>
-						<li><a href="#">Автотовары</li></a>
-					</ul>
-				</div>
-				<div class="description">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos dignissimos adipisci cumque enim necessitatibus repellendus, magni debitis. Officia, porro quos, in ipsam ducimus dicta eveniet, harum hic veniam accusamus possimus!
-					</p>
-				</div>
-			</div>
-		</div>
-		<div class="footer">
-			<ul>
+
+		<div class="header">
+			<img src="img/logo_index.png" alt="Firness">
+			<ul class="nav_menu">
 				<li><a href="#">Главная</li></a>
 				<li><a href="#">Товары</li></a>
 				<li><a href="#">О нас</li></a>
 				<li><a href="#">Контакты</li></a>
 			</ul>
-			<p>2014&copy;All rights reserved</p>
+		</div>	
+
+		<div class="container">
+			<div class="left_menu">
+				<ul>
+					<li><a href="#">Ноутбуки</li></a>
+					<li><a href="#">Планшеты</li></a>
+					<li><a href="#">Телефоны</li></a>
+					<li><a href="#">Телевизоры</li></a>
+					<li><a href="#">Бытовая техника</li></a>
+					<li><a href="#">Автотовары</li></a>
+				</ul>
+			</div>
+			<div class="content">
+				<div class="img">
+					<img src="img/img_bicycle.png" alt="bicycle">
+				</div>
+			</div>	
+			<div class="description">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos dignissimos adipisci cumque enim necessitatibus repellendus, magni debitis. Officia, porro quos, in ipsam ducimus dicta eveniet, harum hic veniam accusamus possimus!
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos dignissimos adipisci cumque enim necessitatibus repellendus, magni debitis. Officia, porro quos, in ipsam ducimus dicta eveniet, harum hic veniam accusamus possimus!
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos dignissimos adipisci cumque enim necessitatibus repellendus, magni debitis. Officia, porro quos, in ipsam ducimus dicta eveniet, harum hic veniam accusamus possimus!
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos dignissimos adipisci cumque enim necessitatibus repellendus, magni debitis. Officia, porro quos, in ipsam ducimus dicta eveniet, harum hic veniam accusamus possimus!
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos dignissimos adipisci cumque enim necessitatibus repellendus, magni debitis. Officia, porro quos, in ipsam ducimus dicta eveniet, harum hic veniam accusamus possimus!
+				</p>
+			</div>
+		</div>
+
+		<div class="footer">
+			<ul class="footer_menu">
+				<li><a href="#">Главная</li></a>
+				<li><a href="#">Товары</li></a>
+				<li><a href="#">О нас</li></a>
+				<li><a href="#">Контакты</li></a>
+				<li><a href="#">2014&copy;All rights reserved</li></a>
+			</ul>
 		</div>
 	</div>
 </body>
