--- a/GoIT/markup/home/lesson3/index.html
+++ b/GoIT/markup/home/lesson3/index.html
@@ -10,7 +10,7 @@
 	<div class="wrapper">
 
 		<div class="header">
-			<img src="img/logo_index.png" alt="Firness">
+			<div class="logo"><img src="img/logo_index.png" alt="Firness"></div>
 			<ul class="nav_menu">
 				<li><a href="#">Главная</li></a>
 				<li><a href="#">Товары</li></a>
