--- a/GoIT/markup/home/lesson3/index.html
+++ b/GoIT/markup/home/lesson3/index.html
@@ -7,34 +7,36 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<div class="wrapper">
+	<div class="wrapper clearfix">
 
 		<div class="header">
-			<div class="logo"><img src="img/logo_index.png" alt="Firness"></div>
-			<ul class="nav_menu">
-				<li><a href="#">Главная</li></a>
-				<li><a href="#">Товары</li></a>
-				<li><a href="#">О нас</li></a>
-				<li><a href="#">Контакты</li></a>
-			</ul>
-		</div>	
-
-		<div class="container">
-			<div class="left_menu">
-				<ul>
-					<li><a href="#">Ноутбуки</li></a>
-					<li><a href="#">Планшеты</li></a>
-					<li><a href="#">Телефоны</li></a>
-					<li><a href="#">Телевизоры</li></a>
-					<li><a href="#">Бытовая техника</li></a>
-					<li><a href="#">Автотовары</li></a>
+			<div class="logo">
+				<img src="img/logo_index.png" alt="Firness">
+			</div>
+			<div class="navigation clearfix">
+				<ul class="navigation_li">
+					<li><a href="#">Главная</li></a>
+					<li><a href="#">Товары</li></a>
+					<li><a href="#">О нас</li></a>
+					<li><a href="#">Контакты</li></a>
 				</ul>
 			</div>
-			<div class="content">
-				<div class="img">
-					<img src="img/img_bicycle.png" alt="bicycle">
-				</div>
-			</div>	
+		</div>	
+
+		<div class="sidebar clearfix">
+			<ul class="sidebar_li">
+				<li><a href="#">Ноутбуки</li></a>
+				<li><a href="#">Планшеты</li></a>
+				<li><a href="#">Телефоны</li></a>
+				<li><a href="#">Телевизоры</li></a>
+				<li><a href="#">Бытовая техника</li></a>
+				<li><a href="#">Автотовары</li></a>
+			</ul>
+		</div>
+		<div class="content clearfix">
+			<div class="content_img">
+				<img src="img/img_bicycle.png" alt="bicycle">
+			</div>
 			<div class="description">
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos dignissimos adipisci cumque enim necessitatibus repellendus, magni debitis. Officia, porro quos, in ipsam ducimus dicta eveniet, harum hic veniam accusamus possimus!
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos dignissimos adipisci cumque enim necessitatibus repellendus, magni debitis. Officia, porro quos, in ipsam ducimus dicta eveniet, harum hic veniam accusamus possimus!
@@ -45,14 +47,14 @@
 			</div>
 		</div>
 
-		<div class="footer">
-			<ul class="footer_menu">
+		<div class="footer clearfix">
+			<ul class="footer_li ">
 				<li><a href="#">Главная</li></a>
 				<li><a href="#">Товары</li></a>
 				<li><a href="#">О нас</li></a>
 				<li><a href="#">Контакты</li></a>
-				<li><a href="#">2014&copy;All rights reserved</li></a>
 			</ul>
+			<div class="copy "><a href="">2014&copy;All rights reserved</a></div>
 		</div>
 	</div>
 </body>
