--- a/GoIT/markup/home/lesson4/index.html
+++ b/GoIT/markup/home/lesson4/index.html
@@ -8,10 +8,10 @@
 	<link rel="stylesheet" href="css/style.css">	
 </head>
 <body>
-	<div class="wrapper clearfix">
-		<div class="header clearfix">
-			 <div class="logo">
-				 <img src="img/logo.png" alt="asia-holidays logo">
+	<div class="wrapper">
+		<div class="header ">
+			 <div class="logo clearfix">
+				<img src="img/logo.png" alt="asia-holidays logo">
 			 </div>
 	
 			 <div class="contacts clearfix">
@@ -23,16 +23,16 @@
 			 	 </ul>
 			 </div>
 
-			<!-- <div class="contries">
-				 <ul>
-					 <li><a href="#"><img src="img/m_flag.jpg" alt="">Мальдивы</a></li>
-				 	 <li><a href="#"><img src="img/s_flag.jpg" alt="">Шри-Ланка</a></li>
-					 <li><a href="#"><img src="img/b_flag.jpg" alt="">Бутан</a></li>
-					 <li><a href="#"><img src="img/t_flag.jpg" alt="">Тибет</a></li>
-					 <li><a href="#"><img src="img/n_flag.jpg" alt="">Непал</a></li>
-					 <li><a href="#"><img src="img/i_flag.jpg" alt="">Индия</a></li>
-				 </ul> 
-			 </div>-->
+			<div class="contries clearfix">
+				<ul>
+					 <li><a href="#"><img src="img/icon1.png" alt="">Индия</a></li>
+				 	 <li><a href="#"><img src="img/icon2.png" alt="">Непал</a></li>
+					 <li><a href="#"><img src="img/icon3.png" alt="">Тибет</a></li>
+					 <li><a href="#"><img src="img/icon4.png" alt="">Бутан</a></li>
+					 <li><a href="#"><img src="img/icon5.png" alt="">Шри-Ланка</a></li>
+					 <li><a href="#"><img src="img/icon6.png" alt="">Мальдивы</a></li>
+				</ul>	
+			 </div>
 		</div>
 	
 			 <div class="main_photo">
@@ -40,19 +40,21 @@
 			 </div>
 		
 			 <ul class="navigation clearfix">
-				 <li><a href="#">Главная</a></li>
-				 <li class="show">
-				 	<a href="#">Путешествие&#9660;</a>
-				 	<ul class="dropdown">
-				 		<li><a href="#">Путешествие 1</a></li>
-				 		<li><a href="#">Путешествие 2</a></li>
-				 		<li><a href="#">Путешествие 3</a></li>
-				 		<li><a href="#">Путешествие 4</a></li>
-				 		<li><a href="#">Путешествие 5</a></li>
-				 	</ul>
+				 <li>
+				 	<a href="#">Главная</a>
 				 </li>
-				 <li><a href="#">Услуги&#9660;</a></li>
-				 <li><a href="#">Партнерам&#9660;</a></li>
+				 <li>
+				 	<a href="#">Путешествие</a>				 	
+				 		<ul>
+				 			<li><a href="#">Путешествие 1</a></li>
+				 			<li><a href="#">Путешествие 2</a></li>
+				 			<li><a href="#">Путешествие 3</a></li>
+				 			<li><a href="#">Путешествие 4</a></li>
+				 			<li><a href="#">Путешествие 5</a></li>
+				 		</ul>
+				 </li>
+				 <li><a href="#">Услуги</a></li>
+				 <li><a href="#">Партнерам</a></li>
 				 <li><a href="#">Отзывы клиентов</a></li>
 				 <li><a href="#">О нас</a></li>
 				 <li><a href="#">Контакты</a></li>
@@ -107,7 +109,7 @@
 	 		 </div>
 	 	 </div>
 	 </div>
-		<div class="footer clearfix">
+		<div class="footer">
 			 <p>Copyright&copy; asia-holidays.com. 2010
 			 </p>
 		</div>
