--- a/GoIT/markup/home/lesson5/index.html
+++ b/GoIT/markup/home/lesson5/index.html
@@ -20,8 +20,42 @@
 				<li><a href="#">Meu YouBike</a></li>
 			</ul>
 		</div>
-		<div class="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque ipsam nesciunt alias expedita, commodi eum autem ad blanditiis qui repellendus culpa provident voluptates quibusdam cum, fuga temporibus doloremque nostrum vel!</div>
-		<div class="footer">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque ipsam nesciunt alias expedita, commodi eum autem ad blanditiis qui repellendus culpa provident voluptates quibusdam cum, fuga temporibus doloremque nostrum vel!</div>
-	</div>
+		<div class="form">
+			 <form action="#" method="POST">
+			 <h1>Cadastre-se</h1>
+			 <div>
+			 		<button>Log In with Facebook</button>
+			 	</div>
+			 	<p>OU</p>
+
+			 	<div>
+			 	  <input type="text" placeholder="First Name">
+			 	</div>
+			 	<div>
+			 	  <input type="text" placeholder="Last Name">
+			 	</div>
+			 	<div>
+			 	  <input type="email" placeholder="Email Address">
+			 	</div>
+			 	<div>
+			 	  <input type="password" placeholder="Password Confirm">
+			 	</div>
+			 	<div>
+			 	  <label><input type="checkbox" id="sibscribe">Send me Youbike updates and tips</label>
+			 	</div>
+			 	<div>
+			 		<button>Create my Account</button>
+			 	</div>
+			 	<div class="bottom-text">
+			 	<p>
+			 	 	By clicking the button above, you agree to the Terms of Service 
+			 	 </p>
+			 	 <p> 
+			 	 	Xiew our Privacy Policy.
+			 	</p>
+			 	</div>
+			 </form>
+		</div>
+		
 </body>
 </html>
