--- a/GoIT/markup/home/lesson5/index.html
+++ b/GoIT/markup/home/lesson5/index.html
@@ -22,38 +22,42 @@
 		</div>
 		<div class="form">
 			 <form action="#" method="POST">
-			 <h1>Cadastre-se</h1>
-			 <div>
-			 		<button>Log In with Facebook</button>
-			 	</div>
-			 	<p>OU</p>
 
-			 	<div>
-			 	  <input type="text" placeholder="First Name">
-			 	</div>
-			 	<div>
-			 	  <input type="text" placeholder="Last Name">
-			 	</div>
-			 	<div>
-			 	  <input type="email" placeholder="Email Address">
-			 	</div>
-			 	<div>
-			 	  <input type="password" placeholder="Password Confirm">
-			 	</div>
-			 	<div>
-			 	  <label><input type="checkbox" id="sibscribe">Send me Youbike updates and tips</label>
-			 	</div>
-			 	<div>
-			 		<button>Create my Account</button>
-			 	</div>
-			 	<div class="bottom-text">
+			 <div>
+			 	<h1>Cadastre-se</h1>
+			 </div>
+			 <div>
+			 		 <input type="button" class="btnFB" value="Log In with Facebook">
+			 </div>
+			 <div class="lines">
+			 <p>OU</p>
+			 </div>
+			 <div>
+			 	 <input type="text" placeholder="    First Name">
+			 </div>
+			 <div>
+			 	 <input type="text" placeholder="    Last Name">
+			 </div>
+			 <div> 
+			 	 <input type="email" placeholder="    Email Address">
+			 </div>
+			 <div>
+			 	 <input type="password" placeholder="    Password Confirm">
+			 </div>
+			 <div>
+			 	 <label><input type="checkbox" id="sibscribe">Send me Youbike updates and tips</label>
+			 </div>
+			 <div>
+			 	 <input type="button" class="btn" value="Create my Account">
+			 </div>
+			 <div class="bottom-text">
 			 	<p>
 			 	 	By clicking the button above, you agree to the Terms of Service 
 			 	 </p>
 			 	 <p> 
 			 	 	Xiew our Privacy Policy.
 			 	</p>
-			 	</div>
+			 </div>
 			 </form>
 		</div>
 		
