add new div and delete clearfix

--- a/GoIT/markup/home/lesson3/index.html
+++ b/GoIT/markup/home/lesson3/index.html
@@ -13,27 +13,31 @@
 			<div class="logo">
 				<img src="img/logo_index.png" alt="Firness">
 			</div>
+
 			<div class="navigation clearfix">
 				<ul class="navigation_li">
-					<li><a href="#">Главная</li></a>
-					<li><a href="#">Товары</li></a>
-					<li><a href="#">О нас</li></a>
-					<li><a href="#">Контакты</li></a>
+					<li><a href="#">Главная</a></li>
+					<li><a href="#">Товары</a></li>
+					<li><a href="#">О нас</a></li>
+					<li><a href="#">Контакты</a></li>
 				</ul>
 			</div>
 		</div>	
 
 		<div class="sidebar clearfix">
 			<ul class="sidebar_li">
-				<li><a href="#">Ноутбуки</li></a>
-				<li><a href="#">Планшеты</li></a>
-				<li><a href="#">Телефоны</li></a>
-				<li><a href="#">Телевизоры</li></a>
-				<li><a href="#">Бытовая техника</li></a>
-				<li><a href="#">Автотовары</li></a>
+				<li><a href="#">Ноутбуки</a></li>
+				<li><a href="#">Планшеты</a></li>
+				<li><a href="#">Телефоны</a></li>
+				<li><a href="#">Телевизоры</a></li>
+				<li><a href="#">Бытовая техника</a></li>
+				<li><a href="#">Автотовары</a></li>
 			</ul>
 		</div>
-		<div class="content clearfix">
+ 
+<div class="content-test clearfix">
+
+		<div class="content">
 			<div class="content_img">
 				<img src="img/img_bicycle.png" alt="bicycle">
 			</div>
@@ -46,16 +50,18 @@
 				</p>
 			</div>
 		</div>
+</div>
 
-		<div class="footer clearfix">
+		<div class="footer clearfixs">
 			<ul class="footer_li ">
-				<li><a href="#">Главная</li></a>
-				<li><a href="#">Товары</li></a>
-				<li><a href="#">О нас</li></a>
-				<li><a href="#">Контакты</li></a>
+				<li><a href="#">Главная</a></li>
+				<li><a href="#">Товары</a></li>
+				<li><a href="#">О нас</a></li>
+				<li><a href="#">Контакты</a></li>
 			</ul>
 			<div class="copy "><a href="">2014&copy;All rights reserved</a></div>
 		</div>
+
 	</div>
 </body>
 </html>
