add font, working on header and buttons

--- a/GoIT/markup/home/lesson5/index.html
+++ b/GoIT/markup/home/lesson5/index.html
@@ -5,19 +5,19 @@
 	<title>Cadastre</title>
 	<link rel="stylesheet" href="css/reset.css"> 
 	<link rel="stylesheet" href="css/style.css">	
-
 </head>
 <body>
 	<div class="wrapper">
 		<div class="header clearfix">
 			<ul>
-				<li><a href="#">Ola! Entar ou Cadastre-se</a></li>
-				<li><a href="#">Minhas Ofetas </a></li>
-				<li id="anchor-header"><a href="#">Ajuda</a></li>
-				<li><a href="#">Contato</a></li>
-				<li><a href="#">Forum</a></li>
-				<li><a href="#">Vender</a></li>
+				<!-- <li><input type="button" value="Ola! Entar ou Cadastre-se"></li> -->
 				<li><a href="#">Meu YouBike</a></li>
+				<li><a href="#">Vender</a></li>
+				<li><a href="#">Forum</a></li>
+				<li><a href="#">Contato</a></li>
+				<li><a href="#">Ajuda</a></li>
+				<li><a href="#">Minhas Ofetas </a></li>
+				<li><a href="#">Ola! Entar ou Cadastre-se</a></li>
 			</ul>
 		</div>
 		<div class="form">
