work on mistakes

--- a/GoIT/markup/home/lesson4/index.html
+++ b/GoIT/markup/home/lesson4/index.html
@@ -62,51 +62,47 @@
 	 
  		 <div class="content clearfix">
 			 <div class="info clearfix">  
-			 	<ul>
-			 		<li>Информация</li>
-			 		<li>Lorem ipsum dolor sit amet</li>
-			 		<li>Lorem ipsum dolor sit amet</li>
-			 		<li>Lorem ipsum dolor sit amet</li>
-			 		<li>Lorem ipsum dolor sit amet</li>
-			 		<li>Lorem ipsum dolor sit amet</li>
-			 		<li>Lorem ipsum dolor sit amet</li>
-			 		<li>Lorem ipsum dolor sit amet</li>
-			 		<li>Lorem ipsum dolor sit amet</li>
-			 	</ul>
-		 	 </div>
+			 	<h2>Информация</h2>
+			 		<p>Lorem ipsum dolor sit amet</p>
+			 		<p>Lorem ipsum dolor sit amet</p>
+			 		<p>Lorem ipsum dolor sit amet</p>		 	
+			 		<p>Lorem ipsum dolor sit amet</p>
+			 		<p>Lorem ipsum dolor sit amet</p>
+			 		<p>Lorem ipsum dolor sit amet</p>
+			 		<p>Lorem ipsum dolor sit amet</p>
+			 		<p>Lorem ipsum dolor sit amet</p>
+			  </div>
 
-		 	 <div class="center clearfix">
+		 	 <div class="center">
 				 
 			 </div>
 
 		 	 <div class="news clearfix">
-				 <ul>
-				 	<li>Новости</li>
-				 	<li>Lorem ipsum dolor sit amet</li>
-				 	<li>Lorem ipsum dolor sit amet</li>
-				 	<li>Lorem ipsum dolor sit amet</li>
-				 	<li>Lorem ipsum dolor sit amet</li>
-				 	<li>Lorem ipsum dolor sit amet</li>
-				 	<li>Lorem ipsum dolor sit amet</li>
-				 	<li>Lorem ipsum dolor sit amet</li>
-				 	<li>Lorem ipsum dolor sit amet</li>
-				 	<li>Lorem ipsum dolor sit amet</li>
-				 	<li>Lorem ipsum dolor sit amet</li>
-				 	<li>Lorem ipsum dolor sit amet</li>
-				 	<li>Lorem ipsum dolor sit amet</li>
-				 	<li>Lorem ipsum dolor sit amet</li>
-				 	<li>Lorem ipsum dolor sit amet</li>
-				 	<li>Lorem ipsum dolor sit amet</li>
-				 	<li>Lorem ipsum dolor sit amet</li>
-				 	<li>Lorem ipsum dolor sit amet</li>
-				 	<li>Lorem ipsum dolor sit amet</li>
-				 	<li>Lorem ipsum dolor sit amet</li>
-				 	<li>Lorem ipsum dolor sit amet</li>
-				 	<li>Lorem ipsum dolor sit amet</li>
-				 	<li>Lorem ipsum dolor sit amet</li>
-				 	<li>Lorem ipsum dolor sit amet</li>
-				 </ul>
-	 		 </div>
+				 <h2>Новости</h2>
+				  	 <p>Lorem ipsum dolor sit amet </p>
+				 	 <p>Lorem ipsum dolor sit amet </p>
+				 	 <p>Lorem ipsum dolor sit amet </p>
+				 	 <p>Lorem ipsum dolor sit amet </p>
+				 	 <p>Lorem ipsum dolor sit amet </p>
+				 	 <p>Lorem ipsum dolor sit amet </p>
+				 	 <p>Lorem ipsum dolor sit amet </p>
+				 	 <p>Lorem ipsum dolor sit amet </p>
+				 	 <p>Lorem ipsum dolor sit amet </p>
+				 	 <p>Lorem ipsum dolor sit amet </p>
+				  	 <p>Lorem ipsum dolor sit amet </p>
+				 	 <p>Lorem ipsum dolor sit amet </p>
+				 	 <p>Lorem ipsum dolor sit amet </p>
+				 	 <p>Lorem ipsum dolor sit amet </p>
+				 	 <p>Lorem ipsum dolor sit amet </p>
+				 	 <p>Lorem ipsum dolor sit amet </p> 
+				 	 <p>Lorem ipsum dolor sit amet </p>
+				 	 <p>Lorem ipsum dolor sit amet </p>
+				 	 <p>Lorem ipsum dolor sit amet </p>
+				 	 <p>Lorem ipsum dolor sit amet </p>
+				 	 <p>Lorem ipsum dolor sit amet </p>
+				 	 <p>Lorem ipsum dolor sit amet </p>
+				 	 <p>Lorem ipsum dolor sit amet </p>
+			 </div>
 	 	 </div>
 	 </div>
 		<div class="footer">
