--- a/GoIT/markup/home/lesson4/index.html
+++ b/GoIT/markup/home/lesson4/index.html
@@ -37,14 +37,14 @@
 	
 			 <div class="main_photo">
 				<img src="img/main_photo.jpg" alt="beach photo">
-			 </div>
-		
+			 </div>		
+			 <div>
 			 <ul class="navigation clearfix">
 				 <li>
 				 	<a href="#">Главная</a>
 				 </li>
 				 <li>
-				 	<a href="#">Путешествие</a>				 	
+				 	<a href="#">Путешествие <img src="img/triangle.png" alt=""></a>				 	
 				 		<ul>
 				 			<li><a href="#">Путешествие 1</a></li>
 				 			<li><a href="#">Путешествие 2</a></li>
@@ -53,13 +53,13 @@
 				 			<li><a href="#">Путешествие 5</a></li>
 				 		</ul>
 				 </li>
-				 <li><a href="#">Услуги</a></li>
-				 <li><a href="#">Партнерам</a></li>
+				 <li><a href="#">Услуги <img src="img/triangle.png" alt=""></a></li>
+				 <li><a href="#">Партнерам <img src="img/triangle.png" alt=""></a></li>
 				 <li><a href="#">Отзывы клиентов</a></li>
 				 <li><a href="#">О нас</a></li>
 				 <li><a href="#">Контакты</a></li>
 			 </ul>
-	 
+	 		 </div>
  		 <div class="content clearfix">
 			 <div class="info clearfix">  
 			 	<h2>Информация</h2>
