--- a/GoIT/markup/home/lesson4/index.html
+++ b/GoIT/markup/home/lesson4/index.html
@@ -38,7 +38,7 @@
 			 <div class="main_photo">
 				<img src="img/main_photo.jpg" alt="beach photo">
 			 </div>		
-			 <div>
+			 <div class="navig"> 
 			 <ul class="navigation clearfix">
 				 <li>
 				 	<a href="#">Главная</a>
@@ -53,13 +53,31 @@
 				 			<li><a href="#">Путешествие 5</a></li>
 				 		</ul>
 				 </li>
-				 <li><a href="#">Услуги <img src="img/triangle.png" alt=""></a></li>
-				 <li><a href="#">Партнерам <img src="img/triangle.png" alt=""></a></li>
+				 <li>
+				 	<a href="#">Услуги <img src="img/triangle.png" alt=""></a>
+				 		<ul>
+				 			<li><a href="#">Услуги 1</a></li>
+				 			<li><a href="#">Услуги 2</a></li>
+				 			<li><a href="#">Услуги 3</a></li>
+				 			<li><a href="#">Услуги 4</a></li>
+				 			<li><a href="#">Услуги 5</a></li>
+				 		</ul>
+				 </li>
+				 <li>
+				 	<a href="#">Партнерам <img src="img/triangle.png" alt=""></a>
+				 		<ul>
+				 			<li><a href="#">Партнерам 1</a></li>
+				 			<li><a href="#">Партнерам 2</a></li>
+				 			<li><a href="#">Партнерам 3</a></li>
+				 			<li><a href="#">Партнерам 4</a></li>
+				 			<li><a href="#">Партнерам 5</a></li>
+				 		</ul>
+				 </li>
 				 <li><a href="#">Отзывы клиентов</a></li>
 				 <li><a href="#">О нас</a></li>
 				 <li><a href="#">Контакты</a></li>
 			 </ul>
-	 		 </div>
+	 		 </div> 
  		 <div class="content clearfix">
 			 <div class="info clearfix">  
 			 	<h2>Информация</h2>
