--- a/GoIT/markup/home/lesson5/index.html
+++ b/GoIT/markup/home/lesson5/index.html
@@ -8,17 +8,23 @@
 </head>
 <body>
 	<div class="wrapper">
-		<div class="header clearfix">
+	<div class="header clearfix">
+		<div class="header1">
 			<ul>
-				<!-- <li><input type="button" value="Ola! Entar ou Cadastre-se"></li> -->
+				<li><a href="#">Minhas Ofetas </a></li>
+				<li><a href="#">Ola! <span class="underline">Entar</span> ou <span class="underline">Cadastre-se</span></a></li>
+			</ul>
+		</div>
+		<div class="header2">
+			<ul>
 				<li><a href="#">Meu YouBike</a></li>
 				<li><a href="#">Vender</a></li>
 				<li><a href="#">Forum</a></li>
 				<li><a href="#">Contato</a></li>
 				<li><a href="#">Ajuda</a></li>
-				<li><a href="#">Minhas Ofetas </a></li>
-				<li><a href="#">Ola! Entar ou Cadastre-se</a></li>
 			</ul>
+		</div>
+	
 		</div>
 		<div class="form">
 			 <form action="#" method="POST">
@@ -27,7 +33,8 @@
 			 	<h1>Cadastre-se</h1>
 			 </div>
 			 <div>
-			 		 <input type="button" class="btnFB" value="Log In with Facebook">
+			 <button class="btnFB"><span class="bigF">f</span><span class="log">Log In with Facebook</span><span class="bla">></span></button>
+			 	<!-- <input type="button" class="btnFB" value="Log In with Facebook">  -->
 			 </div>
 			 <div class="lines">
 			 <p>OU</p>
@@ -48,7 +55,8 @@
 			 	 <label><input type="checkbox" id="sibscribe">Send me Youbike updates and tips</label>
 			 </div>
 			 <div>
-			 	 <input type="button" class="btn" value="Create my Account">
+			 	 <!-- <input type="button" class="btn" value="Create my Account" >  -->
+			 	 <button class="btn"><span>Create my Account</span></button>
 			 </div>
 			 <div class="bottom-text">
 			 	<p>
