--- a/GoIT/markup/home/lesson5/index.html
+++ b/GoIT/markup/home/lesson5/index.html
@@ -39,16 +39,16 @@
 			 <p>OU</p>
 			 </div>
 			 <div>
-			 	 <input type="text" placeholder="First Name">
+			 	 <input type="text" placeholder="First Name" required>
 			 </div>
 			 <div>
-			 	 <input type="text" placeholder="Last Name">
+			 	 <input type="text" placeholder="Last Name" required>
 			 </div>
 			 <div> 
-			 	 <input type="email" placeholder="Email Address">
+			 	 <input type="email" placeholder="Email Address" required>
 			 </div>
 			 <div>
-			 	 <input type="password" placeholder="Password Confirm">
+			 	 <input type="password" placeholder="Password Confirm" required>
 			 </div>
 			 <div>
 			 	 <label><input type="checkbox" id="sibscribe">Send me Youbike updates and tips</label>
