--- a/GoIT/markup/home/lesson5-1/index.html
+++ b/GoIT/markup/home/lesson5-1/index.html
@@ -4,8 +4,119 @@
 
 	<meta charset="UTF-8">
 	<title>Document</title>
+   <style>
+    table
+    {
+      border-spacing: 0px;
+      empty-cells: hide;
+    }
+  </style>
 </head>
 <body>
+<table border="1" cellpadding="25">
+  <tr>
+    <td colspan="3">&nbsp;</td>
+    <td  colspan="4"> &nbsp;</td>
+    <td  colspan="4" bgcolor="#fff600">&nbsp;</td>
+  </tr>  
+  <tr>
+    <td  rowspan="3">&nbsp;</td>
+    <td  rowspan="6" colspan="6" bgcolor="#ff0000">&nbsp;</td>
+    <td  rowspan="3" colspan="4" bgcolor="#fff600">&nbsp;</td>
+    <td > </td>
+    <td > </td>
+    <td > </td>
+  </tr>  
+  <tr> 
+    <td > </td>
+    <td > </td>
+    <td > </td>
+    <td > </td>
+  </tr>  
+  <tr>
+    <td > </td>
+    <td > </td>
+    <td > </td>
+    <td > </td>
+  </tr>  
+  <tr>
+    <td  rowspan="5">&nbsp;</td>
+    <td  rowspan="3" colspan="2">&nbsp;</td>
+    <td  rowspan="3" colspan="2">&nbsp;</td>
+    <td > </td>
+    <td > </td>
+  </tr>  
+  <tr>
+    <td > </td>
+    <td > </td>
+    <td > </td>
+    <td > </td>
+  </tr>  
+  <tr>
+    <td > </td>  
+    <td > </td>
+    <td > </td>
+    <td > </td>
+  </tr>  
+  <tr>
+    <td  rowspan="4" colspan="3" bgcolor="#000000">&nbsp;</td>
+    <td  rowspan="2" colspan="3">&nbsp;</td>
+    <td  colspan="4">&nbsp;</td>
+    <td > </td>
+    <td > </td>
+    <td > </td>
+    <td > </td>
+    <td > </td>
+  </tr>  
+  <tr>
+    <td  colspan="4">&nbsp;</td>
+    <td > </td>
+    <td > </td>
+    <td > </td>
+    <td > </td>
+    <td > </td>
+    <td > </td>
+  </tr>  
+  <tr>
+    <td  rowspan="4" bgcolor="#fff600">&nbsp;</td>
+    <td  rowspan="2" colspan="3">&nbsp;</td>
+    <td  rowspan="3" colspan="4" bgcolor="#0e0e83">&nbsp;</td>
+    <td > </td>
+    <td > </td>
+    <td > </td>
+    <td > </td>
+    <td > </td>
+    <td > </td>
+  </tr>  
+  <tr>
+    <td > </td>
+    <td > </td>
+    <td > </td>
+    <td > </td>
+    <td > </td>
+    <td > </td>
+    <td > </td>
+  </tr>  
+  <tr>
+    <td colspan="3" rowspan="2">&nbsp;</td>
+    <td colspan="3" bgcolor="#000000">&nbsp;</td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+  </tr> 
+  <tr>
+    <td colspan="7">&nbsp;</td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+  </tr>
+</table>
 	
 </body>
 </html>
