--- a/GoIT/markup/home/lesson4/index.html
+++ b/GoIT/markup/home/lesson4/index.html
@@ -12,6 +12,7 @@
 		<div class="header ">
 			 <div class="logo clearfix">
 				<img src="img/logo.png" alt="asia-holidays logo">
+				<h1>Путешествия по Азии</h1>
 			 </div>
 	
 			 <div class="contacts clearfix">
