--- a/GoIT/markup/home/lesson5/index.html
+++ b/GoIT/markup/home/lesson5/index.html
@@ -9,20 +9,22 @@
 <body>
 	<div class="wrapper">
 	<div class="header clearfix">
-		<div class="header1">
-			<ul>
-				<li><a href="#">Minhas Ofetas </a></li>
-				<li><a href="#">Ola! <span class="underline">Entar</span> ou <span class="underline">Cadastre-se</span></a></li>
-			</ul>
-		</div>
-		<div class="header2">
-			<ul>
-				<li><a href="#">Meu YouBike</a></li>
-				<li><a href="#">Vender</a></li>
-				<li><a href="#">Forum</a></li>
-				<li><a href="#">Contato</a></li>
-				<li><a href="#">Ajuda</a></li>
-			</ul>
+		<div class="header-wrapper">
+			<div class="header1">
+				<ul>
+					<li><a href="#"><span class="underline-on">Minhas Ofetas</span></a></li>
+					<li><a href="#">Ola! <span class="underline">Entar</span> ou <span class="underline">Cadastre-se</span></a> </li>
+				</ul>
+			</div>
+			<div class="header2">
+				<ul>
+					<li><a href="#">Meu YouBike</a></li>
+					<li><a href="#">Vender</a></li>
+					<li><a href="#">Forum</a></li>
+					<li><a href="#">Contato</a></li>
+					<li><a href="#">Ajuda</a></li>
+				</ul>
+			</div>
 		</div>
 	
 		</div>
@@ -33,21 +35,21 @@
 			 	<h1>Cadastre-se</h1>
 			 </div>
 			 <div>
-			 <button class="btnFB"><span class="bigF">f</span><span class="log">Log In with Facebook</span><span class="bla">></span></button>
+			 	<button class="btnFB"><span class="bigF">f</span><span class="log">Log In with Facebook</span><span class="bla">></span></button>
 			 </div>
 			 <div class="lines">
 			 <p>OU</p>
 			 </div>
-			 <div>
+			 <div class="text-input">
 			 	 <input type="text" placeholder="First Name" required>
 			 </div>
-			 <div>
+			 <div class="text-input">
 			 	 <input type="text" placeholder="Last Name" required>
 			 </div>
-			 <div> 
+			 <div class="text-input"> 
 			 	 <input type="email" placeholder="Email Address" required>
 			 </div>
-			 <div>
+			 <div class="text-input">
 			 	 <input type="password" placeholder="Password Confirm" required>
 			 </div>
 			 <div>
