--- a/GoIT/markup/home/lesson5/index.html
+++ b/GoIT/markup/home/lesson5/index.html
@@ -31,34 +31,35 @@
 		<div class="form">
 			 <form action="#" method="POST">
 
-			 <div>
-			 	<h1>Cadastre-se</h1>
-			 </div>
-			 <div>
-			 	<button class="btnFB"><span class="bigF">f</span><span class="log">Log In with Facebook</span><span class="bla">></span></button>
-			 </div>
-			 <div class="lines">
-			 <p>OU</p>
-			 </div>
-			 <div class="text-input">
-			 	 <input type="text" placeholder="First Name" required>
-			 </div>
-			 <div class="text-input">
-			 	 <input type="text" placeholder="Last Name" required>
-			 </div>
-			 <div class="text-input"> 
-			 	 <input type="email" placeholder="Email Address" required>
-			 </div>
-			 <div class="text-input">
-			 	 <input type="password" placeholder="Password Confirm" required>
-			 </div>
-			 <div>
-			 	 <label><input type="checkbox" id="sibscribe">Send me Youbike updates and tips</label>
-			 </div>
-			 <div>
-			 	 <button class="btn"><span>Create my Account</span></button>
-			 </div>
-			 <div class="bottom-text">
+				 <div class="title">
+			 		<h1>Cadastre-se</h1>
+			 	</div>
+			 	<div class="btnf">
+			 		<button class="btnFB" ><span class="bigF">f</span><span class="log">Log In with Facebook</span><span class="bla">></span></button>
+			 	</div>
+			 	<div class="lines">
+			 		<p>OU</p>
+			 	</div>
+			 	<div class="text-input">
+			 	 	<input type="text" placeholder="First Name" required>
+				 </div>
+				 <div class="text-input">
+			 		 <input type="text" placeholder="Last Name" required>
+			 	</div>
+			 	<div class="text-input"> 
+			 		 <input type="email" placeholder="Email Address" required>
+			 	</div>
+			 	<div class="text-input">
+			 		 <input type="password" placeholder="Password Confirm" required>
+				 </div>
+				 <div class="labelcl">
+			 	 	<label><input type="checkbox" id="sibscribe">Send me Youbike updates and tips</label>
+				 </div>
+				 <div class="btnAcc">
+			 		 <button class="btn"><span>Create my Account</span></button>
+			 	</div>
+			 	</form>
+			  <div class="bottom-text">
 			 	<p>
 			 	 	By clicking the button above, you agree to the Terms of Service 
 			 	 </p>
@@ -66,7 +67,6 @@
 			 	 	Xiew our Privacy Policy.
 			 	</p>
 			 </div>
-			 </form>
 		</div>
 		
 </body>
