--- a/GoIT/markup/home/lesson6/index.html
+++ b/GoIT/markup/home/lesson6/index.html
@@ -42,8 +42,7 @@
 <div class="banner">
 		<a href="#"></a>
 	</div>
-<nav>
-<div class="menu_main clearfix">
+<nav class="menu_main clearfix">
 	<ul>
 		<li><a href="#">О КОМПАНИ</a></li>
 		<li><a href="#">ОПЛАТА</a></li>
@@ -58,18 +57,52 @@
 		<li><a href="#">на сумму:0.00 грн.</a></li>
 	</ul>
 	</div>
-</div>
 </nav>
+<div class="search_wrapper clearfix">
+	<div class="search_car ">
 
-		<aside></aside>
+		<div class="tires">
+			<p>Диски:</p>
+		</div>
 
-		<main></main>
-
-		<aside></aside>
+		<div class="wheels">
+			<p>Шины</p>
+		</div>
 	</div>
 
-		<footer></footer> -->
+	<div class="search_tires">
+		<p>поиск шин</p>
+	</div>
 
+	<div class="search_wheels">
+		<p>поиск дисков</p>
+	</div>
+
+</div>
+<div class="content clearfix">
+
+	<aside></aside>
+
+	<div class="main">
+		
+	</div>
+
+	<aside></aside>
+			 
+</div>
+<div class="footer_photo"></div>
+	<footer>
+
+		<nav class="footer_menu clearfix">
+			<ul>
+				<li><a href="#">О компании</a></li>
+				<li><a href="#">Доставка</a></li>
+				<li><a href="#">Статьи</a></li>
+				<li><a href="#">Контакты</a></li>
+			</ul>
+		</nav>
+		<div class="copy "><a href="">Создание сайта &copy; Global Vision</a></div>
+	</footer>
 </div>
 </body>
 </html>
