--- a/GoIT/markup/home/lesson5/index.html
+++ b/GoIT/markup/home/lesson5/index.html
@@ -29,7 +29,7 @@
 	
 		</div>
 		<div class="form">
-			 <form action="#" method="POST">
+			 
 
 				 <div class="title">
 			 		<h1>Cadastre-se</h1>
@@ -40,6 +40,7 @@
 			 	<div class="lines">
 			 		<p>OU</p>
 			 	</div>
+			 	<form action="#" method="POST">
 			 	<div class="text-input">
 			 	 	<input type="text" placeholder="First Name" required>
 				 </div>
@@ -50,15 +51,19 @@
 			 		 <input type="email" placeholder="Email Address" required>
 			 	</div>
 			 	<div class="text-input">
+			 		 <input type="password" placeholder="Choose Password" required>
+				 </div>
+			 	<div class="text-input">
 			 		 <input type="password" placeholder="Password Confirm" required>
 				 </div>
 				 <div class="labelcl">
 			 	 	<label><input type="checkbox" id="sibscribe">Send me Youbike updates and tips</label>
 				 </div>
+				 </form>
 				 <div class="btnAcc">
 			 		 <button class="btn"><span>Create my Account</span></button>
 			 	</div>
-			 	</form>
+			 	
 			  <div class="bottom-text">
 			 	<p>
 			 	 	By clicking the button above, you agree to the Terms of Service 
