--- a/GoIT/markup/home/lesson6/index.html
+++ b/GoIT/markup/home/lesson6/index.html
@@ -81,9 +81,88 @@
 </div>
 <div class="content clearfix">
 
-	<aside></aside>
+	<aside>
+		<p>КАТАЛОГ ПРОДУКЦИИ:</p>
+		<p>ШИНЫ</p>
+		<ul>
+			<li><a href="#"><span>Наименование 1</span></a></li>
+			<li><a href="#"><span>Наименование 2</span></a></li>
+			<li><a href="#"><span>Наименование 3</span></a></li>
+			<li><a href="#"><span>Наименование 3</span></a></li>
+		</ul>
+
+		<p>ДИСКИ</p>
+		<ul>
+			<li><a href="#"><span>Наименование 1</span></a></li>
+			<li><a href="#"><span>Наименование 2</span></a></li>
+			<li><a href="#"><span>Наименование 3</span></a></li>
+			<li><a href="#"><span>Наименование 3</span></a></li>
+		</ul>
+
+		<p>БОЛТЫ</p>
+		<ul>
+			<li><a href="#"><span>Наименование 1</span></a></li>
+			<li><a href="#"><span>Наименование 2</span></a></li>
+			<li><a href="#"><span>Наименование 3</span></a></li>
+			<li><a href="#"><span>Наименование 3</span></a></li>
+		</ul>
+	</aside>
 
 	<div class="main">
+		<figure>
+			<figcaption><span>Goodyear</span></figcaption>
+			<figcaption>Ultra Grip Extreme</figcaption>
+			<img src="img/1_tires.jpg" alt="">
+			<figcaption><span class="price">90.00 грн.</span></figcaption>
+		</figure>
+		<figure>
+			<figcaption><span>Nokian</span></figcaption>
+			<figcaption>Hakkapeliitta R</figcaption>
+			<img src="img/2_tires.jpg" alt="">
+			<figcaption><span class="price">115.00 грн.</span></figcaption>
+		</figure>
+		<figure>
+			<figcaption><span>Hankook</span></figcaption>
+			<figcaption>K 708 155/65 R14</figcaption>
+			<img src="img/3_tires.jpg" alt="">
+			<figcaption><span class="price">393.00 грн.</span></figcaption>
+		</figure>
+		<figure>
+			<figcaption><span>Goodyear</span></figcaption>
+			<figcaption>Ultra Grip Extreme</figcaption>
+			<img src="img/1_tires.jpg" alt="">
+			<figcaption><span class="price">90.00 грн.</span></figcaption>
+		</figure>
+		<figure>
+			<figcaption><span>Nokian</span></figcaption>
+			<figcaption>Hakkapeliitta R</figcaption>
+			<img src="img/2_tires.jpg" alt="">
+			<figcaption><span class="price">115.00 грн.</span></figcaption>
+		</figure>
+		<figure>
+			<figcaption><span>Hankook</span></figcaption>
+			<figcaption>K 708 155/65 R14</figcaption>
+			<img src="img/3_tires.jpg" alt="">
+			<figcaption><span class="price">393.00 грн.</span></figcaption>
+		</figure>
+		<figure>
+			<figcaption><span>Goodyear</span></figcaption>
+			<figcaption>Ultra Grip Extreme</figcaption>
+			<img src="img/1_tires.jpg" alt="">
+			<figcaption><span class="price">90.00 грн.</span></figcaption>
+		</figure>
+		<figure>
+			<figcaption><span>Nokian</span></figcaption>
+			<figcaption>Hakkapeliitta R</figcaption>
+			<img src="img/2_tires.jpg" alt="">
+			<figcaption><span class="price">115.00 грн.</span></figcaption>
+		</figure>
+		<figure>
+		    <figcaption><span>Hankook</span></figcaption>
+			<figcaption>K 708 155/65 R14</figcaption>
+			<img src="img/3_tires.jpg" alt="">
+			<figcaption><span class="price">393.00 грн.</span></figcaption>
+		</figure>
 		
 	</div>
 
