--- a/GoIT/markup/home/lesson6/index.html
+++ b/GoIT/markup/home/lesson6/index.html
@@ -82,24 +82,30 @@
 <div class="content clearfix">
 
 	<aside>
-		<p>КАТАЛОГ ПРОДУКЦИИ:</p>
-		<p>ШИНЫ</p>
+		<div class="icone_list">
+			<span>КАТАЛОГ ПРОДУКЦИИ:</span>
+		</div>
+		<div class="icon">
+			<span>ШИНЫ</span>
+		</div>
 		<ul>
 			<li><a href="#"><span>Наименование 1</span></a></li>
 			<li><a href="#"><span>Наименование 2</span></a></li>
 			<li><a href="#"><span>Наименование 3</span></a></li>
 			<li><a href="#"><span>Наименование 3</span></a></li>
 		</ul>
-
-		<p>ДИСКИ</p>
+		<div class="icon">
+			<span>ДИСКИ</span>
+		</div>
 		<ul>
 			<li><a href="#"><span>Наименование 1</span></a></li>
 			<li><a href="#"><span>Наименование 2</span></a></li>
 			<li><a href="#"><span>Наименование 3</span></a></li>
 			<li><a href="#"><span>Наименование 3</span></a></li>
 		</ul>
-
-		<p>БОЛТЫ</p>
+		<div class="icon">
+			<span>БОЛТЫ</span>
+		</div>
 		<ul>
 			<li><a href="#"><span>Наименование 1</span></a></li>
 			<li><a href="#"><span>Наименование 2</span></a></li>
@@ -166,7 +172,28 @@
 		
 	</div>
 
-	<aside></aside>
+	<aside>
+		<div class="icone_list">
+			<span>БРЕНДЫ:</span>
+		</div>
+		<form action="#" method="POST">
+			<div class="icon">
+				<span>ШИНЫ</span>
+			</div>
+			<label><input type="checkbox" id="sibscribe">Бренд 1</label>
+			<label><input type="checkbox" id="sibscribe">Бренд 2</label>
+			<label><input type="checkbox" id="sibscribe">Бренд 3</label>
+			<div class="icon">
+				<span>ДИСКИ</span>
+			</div>
+			<label><input type="checkbox" id="sibscribe">Бренд 1</label>
+			<label><input type="checkbox" id="sibscribe">Бренд 2</label>
+			<label><input type="checkbox" id="sibscribe">Бренд 3</label>
+		</form>
+		 <div>
+			 	<button class="btn"><span>ВЫБРАТЬ</span></button>
+		 </div>
+	</aside>
 			 
 </div>
 <div class="footer_photo"></div>
