--- a/GoIT/markup/home/lesson5/index.html
+++ b/GoIT/markup/home/lesson5/index.html
@@ -28,7 +28,7 @@
 		</div>
 	
 		</div>
-		<div class="form">
+		<div class="form clearfix">
 			 
 
 				 <div class="title">
@@ -59,10 +59,14 @@
 				 <div class="labelcl">
 			 	 	<label><input type="checkbox" id="sibscribe">Send me Youbike updates and tips</label>
 				 </div>
-				 </form>
-				 <div class="btnAcc">
-			 		 <button class="btn"><span>Create my Account</span></button>
+				  <div class="btnAcc">
+				     <input class="btn" type="submit" value="Create my Account">
+			 		 <!-- <button class="btn"><span>Create my Account</span></button> -->
 			 	</div>
+				 </form>
+				<!--  <div class="btnAcc">
+			 		 <button class="btn"><span>Create my Account</span></button>
+			 	</div> -->
 			 	
 			  <div class="bottom-text">
 			 	<p>
