--- a/GoIT/markup/home/lesson6/index.html
+++ b/GoIT/markup/home/lesson6/index.html
@@ -24,9 +24,9 @@
 			</form>
 		</section>
 		<ul class="menu_login">
-			<li><a href="#">вход</a></li>
-			<li><a href="#">регистрация</a></li>
-			<li><a href="#">забыли пароль?</a></li>
+			<li class="menu_item"><a class="menu_link" href="#">вход</a></li>
+			<li class="menu_item"><a class="menu_link" href="#">регистрация</a></li>
+			<li class="menu_item"><a class="menu_link pass_link" href="#">забыли пароль?</a></li>
 		</ul>
 	</div>	
 		
