--- a/GoIT/JavaScript/home/lesson3/index.html
+++ b/GoIT/JavaScript/home/lesson3/index.html
@@ -2,8 +2,10 @@
 <head>
 	<meta charset="UTF-8">
 	<title>JS3</title>
+	 <link rel="stylesheet" href="css/reset.css"> 
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous"> 
 </head>
 <body>
-	
+	<script src ="js/script.js"></script>
 </body>
 </html>
