--- a/GoIT/markup/home/lesson6/index.html
+++ b/GoIT/markup/home/lesson6/index.html
@@ -178,17 +178,27 @@
 		</div>
 		<form action="#" method="POST">
 			<div class="icon">
-				<span>ШИНЫ</span>
+				<span>
+				  ШИНЫ
+				</span>
 			</div>
-			<label><input type="checkbox" id="sibscribe">Бренд 1</label>
-			<label><input type="checkbox" id="sibscribe">Бренд 2</label>
-			<label><input type="checkbox" id="sibscribe">Бренд 3</label>
+			
+            <div class="brands">
+ 			    <label> <input type="checkbox">Бренд 1</label>
+			    <label> <input type="checkbox">Бренд 2</label>
+			    <label> <input type="checkbox">Бренд 3</label>
+            </div>
+
 			<div class="icon">
 				<span>ДИСКИ</span>
 			</div>
-			<label><input type="checkbox" id="sibscribe">Бренд 1</label>
-			<label><input type="checkbox" id="sibscribe">Бренд 2</label>
-			<label><input type="checkbox" id="sibscribe">Бренд 3</label>
+
+			 <div class="brands">
+ 			    <label> <input type="checkbox">Бренд 1</label>
+			    <label> <input type="checkbox">Бренд 2</label>
+			    <label> <input type="checkbox">Бренд 3</label>
+            </div>
+
 		</form>
 		 <div>
 			 	<button class="btn"><span>ВЫБРАТЬ</span></button>
