--- a/GoIT/markup/home/lesson7-8/index.html
+++ b/GoIT/markup/home/lesson7-8/index.html
@@ -2,11 +2,47 @@
 <html lang="ru">
 <head>
 	<meta charset="UTF-8">
-	<title>Cadastre</title>
+	<title>Pingbuller</title>
 	<link rel="stylesheet" href="css/reset.css"> 
 	<link rel="stylesheet" href="css/style.css">	
 </head>
 <body>
+     <header>
+          <a href="#" class="logo"></a>
+          <nav>
+          	  <ul class="menu">
+          	  	<li class="menu_item"><a href="#" class="menu_link">HOME</a></li>
+          	  	<li class="menu_item"><a href="#" class="menu_link">ABOUT</a></li>
+          	  	<li class="menu_item"><a href="#" class="menu_link">BLOG</a></li>
+          	  	<li class="menu_item"><a href="#" class="menu_link">PRODUCTS</a></li>
+          	  	<li class="menu_item"><a href="#" class="menu_link">LOREM IPSUM</a></li>
+          	  	<li class="menu_item"><a href="#" class="menu_link">DOLOR SIT AMET</a></li>
+          	  </ul>
+          </nav>
+     	
+     </header>
+
+     <article>
+     	<h3>
+     	  ABOUT OUR COMPANY
+     	</h3>
+     	<p>
+     	  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum error nobis illo doloribus. Numquam necessitatibus facilis sint ullam. Natus vitae consequuntur aspernatur, minima, laboriosam officiis eos animi corrupti quia perferendis.
+     	</p>
+     </article>
+
+     <footer>
+        <nav>
+          	  <ul class="menu">
+          	  	<li class="menu_item"><a href="#" class="menu_link">HOME</a></li>
+          	  	<li class="menu_item"><a href="#" class="menu_link">ABOUT</a></li>
+          	  	<li class="menu_item"><a href="#" class="menu_link">BLOG</a></li>
+          	  	<li class="menu_item"><a href="#" class="menu_link">PRODUCTS</a></li>
+          	  	<li class="menu_item"><a href="#" class="menu_link">LOREM IPSUM</a></li>
+          	  	<li class="menu_item"><a href="#" class="menu_link">DOLOR SIT AMET</a></li>
+          	  </ul>
+          </nav>     	
+     </footer>
 
 		
 </body>
