--- a/GoIT/markup/home/lesson5/index.html
+++ b/GoIT/markup/home/lesson5/index.html
@@ -35,7 +35,7 @@
 			 		<h1>Cadastre-se</h1>
 			 	</div>
 			 	<div class="btnf">
-			 		<button class="btnFB" ><span class="bigF">f</span><span class="log">Log In with Facebook</span><span class="bla">></span></button>
+			 		<button class="btnFB" ><span class="bigF"><a href="#">f</span><span class="log">Log In with Facebook</span><span class="bla">></span></a></button>
 			 	</div>
 			 	<div class="lines">
 			 		<p>OU</p>
