--- a/GoIT/markup/home/lesson7-8/index.html
+++ b/GoIT/markup/home/lesson7-8/index.html
@@ -4,24 +4,26 @@
 	<meta charset="UTF-8">
 	<title>Pingbuller</title>
 	<link rel="stylesheet" href="css/reset.css"> 
-	<link rel="stylesheet" href="css/style.css">	
+	<link  rel="stylesheet"  href="css/style.css">		
 </head>
 <body>
-     <header>
-          <a href="#" class="logo"></a>
-          <nav>
-          	  <ul class="menu">
-          	  	<li class="menu_item"><a href="#" class="menu_link">HOME</a></li>
-          	  	<li class="menu_item"><a href="#" class="menu_link">ABOUT</a></li>
-          	  	<li class="menu_item"><a href="#" class="menu_link">BLOG</a></li>
-          	  	<li class="menu_item"><a href="#" class="menu_link">PRODUCTS</a></li>
-          	  	<li class="menu_item"><a href="#" class="menu_link">LOREM IPSUM</a></li>
-          	  	<li class="menu_item"><a href="#" class="menu_link">DOLOR SIT AMET</a></li>
-          	  </ul>
-          </nav>
-     	
-     </header>
+	<div class="wrapper one">
+      <header>
+           <a href="#" class="logo"></a>
+           <nav>
+           	   <ul class="menu">
+          	  	 <li class="menu_item"><a href="#" class="menu_link">HOME</a></li>
+          	  	 <li class="menu_item"><a href="#" class="menu_link">ABOUT</a></li>
+          	  	 <li class="menu_item"><a href="#" class="menu_link">BLOG</a></li>
+          	  	 <li class="menu_item"><a href="#" class="menu_link">PRODUCTS</a></li>
+          	  	 <li class="menu_item"><a href="#" class="menu_link">LOREM IPSUM</a></li>
+          	  	 <li class="menu_item"><a href="#" class="menu_link">DOLOR SIT AMET</a></li>
+          	   </ul>
+           </nav>
+      </header>
+    </div>
 
+    <div class="wrapper two">
      <article>
      	<h3>
      	  ABOUT OUR COMPANY
@@ -30,7 +32,14 @@
      	  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum error nobis illo doloribus. Numquam necessitatibus facilis sint ullam. Natus vitae consequuntur aspernatur, minima, laboriosam officiis eos animi corrupti quia perferendis.
      	</p>
      </article>
+     </div>
 
+    <div class="wrapper three">
+
+
+    </div>
+
+    <div class="wrapper four">  
      <footer>
         <nav>
           	  <ul class="menu">
@@ -43,7 +52,10 @@
           	  </ul>
           </nav>     	
      </footer>
+ 
+     <span>Designed by Pingbull AS</span>
 
+    </div>
 		
 </body>
 </html>
